[package]
name = "hilaw"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
image = "0.25"
imagepipe = "0.5"
tower-http = { version = "0.6", features = ["limit", "cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
mime_guess = "2"
bytes = "1"
tempfile = "3"
